K1J-1467: Implementation of aggregation of sick leave certificates from cs and it. Includes TODO to sync with cs api.